--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <section>
             <div class="experiencia">
-                <h5>Experiencia laboral</h5>
+                <h5>Experiencia Laboral</h5>
                 <ul>
                     <li> Mr.Clean Atención al cliente (2019-Actualidad) </li>
                 </ul>
