Agregue un item en experiencia

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <h5>Experiencia Laboral</h5>
                 <ul>
                     <li> Mr.Clean Atención al cliente (2019-Actualidad) </li>
+                    <li>Servicio Técnico</li>
                 </ul>
                 
             </div>
